--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 15:05:04 2018</p>
+         Last Run: Sun Nov 11 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>21</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -46,7 +46,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>31</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -61,7 +61,7 @@
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>22</td>
                      </tr>
                   </tbody>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "74",
+                 "73",
+                 "75",
                  "77"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 15:05:04 2018</p>
+         Last Run: Sun Nov 11 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -270,14 +270,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>6</td>
                         <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -289,7 +289,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,7 +319,7 @@
                "data":[
                  "-11",
                  "-7",
-                 "-6",
+                 "-4",
                  "-2"
                ]
              },
@@ -332,7 +332,7 @@
                "data":[
                  "-7",
                  "-4",
-                 "-2",
+                 "-1",
                  "1"
                ]
              }
@@ -391,7 +391,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "6",
                  "6",
                  "5"
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
+                 "54",
                  "46",
-                 "40",
-                 "37"
+                 "39",
+                 "36"
                ]
              }
            ]
