--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 16:05:02 2018</p>
+         Last Run: Sun Nov 11 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>21</td>
-                        <td>73</td>
+                        <td>10</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>31</td>
-                        <td>75</td>
+                        <td>11</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>24</td>
+                        <td>11</td>
                         <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "31",
-                 "24"
+                 "10",
+                 "11",
+                 "11"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
                  "75",
+                 "77",
                  "77"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "40",
-                 "22"
+                 "19",
+                 "18",
+                 "17"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 16:05:02 2018</p>
+         Last Run: Sun Nov 11 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,47 +249,47 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>54</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
-                        <td>75</td>
+                        <td>5</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>46</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>6</td>
-                        <td>68</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>39</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>5</td>
-                        <td>64</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>4</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,8 +319,8 @@
                "data":[
                  "-11",
                  "-7",
-                 "-4",
-                 "-2"
+                 "-6",
+                 "-3"
                ]
              },
              {
@@ -332,8 +332,8 @@
                "data":[
                  "-7",
                  "-4",
-                 "-1",
-                 "1"
+                 "-2",
+                 "0"
                ]
              }
            ]
@@ -392,9 +392,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
-                 "6",
-                 "5"
+                 "5",
+                 "5",
+                 "4"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "75",
-                 "68",
-                 "64"
+                 "82",
+                 "74",
+                 "67",
+                 "61"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "46",
-                 "39",
-                 "36"
+                 "37",
+                 "28",
+                 "21",
+                 "18"
                ]
              }
            ]
