--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 18:05:05 2018</p>
+         Last Run: Sun Nov 11 19:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -45,8 +45,8 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>8</td>
-                        <td>75</td>
+                        <td>9</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "8",
-                 "8",
+                 "9",
                  "11"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "74",
-                 "75",
+                 "76",
                  "78"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 18:05:05 2018</p>
+         Last Run: Sun Nov 11 19:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,31 +249,31 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>36</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-7</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>5</td>
                         <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>27</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>67</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -282,10 +282,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>4</td>
-                        <td>61</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>9</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -318,9 +318,9 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
+                 "-9",
                  "-7",
-                 "-6",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -331,9 +331,9 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-7",
-                 "-4",
-                 "-2",
-                 "0"
+                 "-5",
+                 "-3",
+                 "-1"
                ]
              }
            ]
@@ -394,7 +394,7 @@
                  "6",
                  "5",
                  "5",
-                 "4"
+                 "9"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "74",
-                 "67",
-                 "61"
+                 "65",
+                 "59"
                ]
              },
              {
@@ -415,10 +415,225 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "27",
+                 "34",
+                 "26",
                  "20",
                  "17"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sun Nov 11 19:05:05 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>53</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>55</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>8</td>
+                        <td>51</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>55</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>6</td>
+                        <td>3</td>
+                        <td>3</td>
+                        <td>50</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>WNW</td>
+                        <td>55</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "1",
+                 "2",
+                 "3"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "4",
+                 "5",
+                 "6"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "8",
+                 "8",
+                 "3"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "53",
+                 "51",
+                 "50"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "55",
+                 "55",
+                 "55"
                ]
              }
            ]
