--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 23:05:05 2018</p>
+         Last Run: Mon Nov 12 00:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,15 +34,27 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>76</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>33</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>6</td>
@@ -50,19 +62,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>36</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>8</td>
-                        <td>74</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>31</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
-                 "8"
+                 "5",
+                 "6"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
                  "74",
+                 "73",
                  "74"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "36",
-                 "31"
+                 "40",
+                 "33",
+                 "29"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 23:05:05 2018</p>
+         Last Run: Mon Nov 12 00:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,47 +249,47 @@
                         <td>-8</td>
                         <td>-12</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>33</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>6</td>
-                        <td>71</td>
+                        <td>5</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>5</td>
-                        <td>63</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>18</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>10</td>
-                        <td>57</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>14</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,8 +319,8 @@
                "data":[
                  "-12",
                  "-10",
-                 "-7",
-                 "-4"
+                 "-8",
+                 "-6"
                ]
              },
              {
@@ -332,8 +332,8 @@
                "data":[
                  "-8",
                  "-6",
-                 "-3",
-                 "-1"
+                 "-4",
+                 "-2"
                ]
              }
            ]
@@ -392,9 +392,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "6",
                  "5",
-                 "10"
+                 "5",
+                 "5"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "71",
-                 "63",
-                 "57"
+                 "84",
+                 "76",
+                 "67",
+                 "61"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "24",
-                 "18",
-                 "14"
+                 "31",
+                 "23",
+                 "16",
+                 "12"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 23:05:05 2018</p>
+         Last Run: Mon Nov 12 00:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -482,36 +482,36 @@
                         <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>9</td>
-                        <td>55</td>
+                        <td>4</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>55</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>9</td>
-                        <td>54</td>
+                        <td>4</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>WNW</td>
-                        <td>52</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "4"
+                 "4",
+                 "4",
+                 "3"
                ]
              },
              {
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
                  "54",
+                 "53",
                  "52"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "52",
-                 "49"
+                 "50",
+                 "49",
+                 "47"
                ]
              }
            ]
